correcting max-width at .container class and spaces between items at footer by correcting gap position

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,10 @@ body {
   color: var(--primary-text-color);
 }
 .container {
-  width: 1200px;
+  max-width: 1200px;
   margin: 0 auto;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 .section {
   padding-top: 94px;
@@ -48,8 +50,6 @@ body {
 }
 .logo {
   text-decoration: none;
-  padding-top: 24px;
-  padding-bottom: 25px;
 }
 
 .first-logo span {
@@ -73,6 +73,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-top: 24px;
+  padding-bottom: 25px;
   border-bottom: 1px solid #ececec;
 }
 .nav-links {
@@ -122,16 +124,6 @@ body {
   border: none;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-}
-
-.footer-container {
-  background-color: var(--secondary-background-color);
-  padding: 60px 0px;
-}
-.footer-items {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
 }
 
 .article-box {
@@ -261,12 +253,23 @@ body {
   letter-spacing: 0.03em;
   margin: 0 24px 20px;
 }
+.footer-container {
+  background-color: var(--secondary-background-color);
+  padding: 60px 0px;
+}
+.footer-items {
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+  justify-content: flex-start;
+}
 
 .address-info {
   color: var(--main-design-white);
   line-height: 171%;
   font-style: normal;
   letter-spacing: 0.03em;
+  margin-top: 20px;
 }
 .footer-contact {
   display: flex;
